--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 </head>
 <body id="top">
+<div class="info-container">
+  <div id="info"></div>
+</div>
+
 <div class="sidebar">
   <div class="inner-container">
     <div class="logo">
@@ -32,41 +36,42 @@
 </div>
 
 <div class="main-content">
-  <!--<section class="intro" id="intro-row">-->
-    <!--<div class="inner-container">-->
-      <!--<div class="title">-->
-        <!--<h3>Intro</h3>-->
-      <!--</div>-->
+  <section class="intro" id="intro-row">
+    <div class="inner-container">
+      <div class="title">
+        <h3>Intro</h3>
+      </div>
 
-      <!--<div class="content">-->
-        <!--<p>-->
-          <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, asperiores atque deserunt dicta doloribus, est illo laborum nesciunt reprehenderit similique sit vel vero voluptatem! Asperiores harum repellat repudiandae sunt suscipit.-->
-          <!--<br><br>-->
-          <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, alias asperiores aut blanditiis consequuntur corporis dignissimos, distinctio exercitationem ipsa iure laboriosam magni officiis optio quis sunt suscipit unde veniam, vitae.-->
-          <!--<br><br>-->
-          <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa dignissimos eum libero pariatur sint sit tenetur velit vitae! Itaque libero magni odio perspiciatis quam! Eligendi illo laboriosam nihil numquam quasi?-->
-        <!--</p>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</section>-->
-
-  <section class="map" id="map-row" style="height: 80vh;">
-    <div id='map' class="map" style="height: 100%;"></div>
+      <div class="content">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, asperiores atque deserunt dicta doloribus, est illo laborum nesciunt reprehenderit similique sit vel vero voluptatem! Asperiores harum repellat repudiandae sunt suscipit.
+          <br><br>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, alias asperiores aut blanditiis consequuntur corporis dignissimos, distinctio exercitationem ipsa iure laboriosam magni officiis optio quis sunt suscipit unde veniam, vitae.
+          <br><br>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa dignissimos eum libero pariatur sint sit tenetur velit vitae! Itaque libero magni odio perspiciatis quam! Eligendi illo laboriosam nihil numquam quasi?
+        </p>
+      </div>
+    </div>
   </section>
 
-  <!--<section class="team" id="team-row">-->
-    <!--<div class="inner-container">-->
-      <!--<div class="title">-->
-        <!--<h3>Team</h3>-->
-      <!--</div>-->
+  <section class="map" id="map-row">
+    <div id='map' class="map"></div>
+  </section>
 
-      <!--<div class="content">-->
-        <!--<p>team</p>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</section>-->
+  <section class="team" id="team-row">
+    <div class="inner-container">
+      <div class="title">
+        <h3>Team</h3>
+      </div>
+
+      <div class="content">
+        <p>team</p>
+      </div>
+    </div>
+  </section>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
