--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Retrofit</title>
 
   <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
   <link rel="stylesheet" href="assets/css/style.css">
@@ -39,16 +39,13 @@
   <section class="intro" id="intro-row">
     <div class="inner-container">
       <div class="title">
-        <h3>Intro</h3>
+        <h3>Introductie</h3>
       </div>
 
       <div class="content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, asperiores atque deserunt dicta doloribus, est illo laborum nesciunt reprehenderit similique sit vel vero voluptatem! Asperiores harum repellat repudiandae sunt suscipit.
-          <br><br>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, alias asperiores aut blanditiis consequuntur corporis dignissimos, distinctio exercitationem ipsa iure laboriosam magni officiis optio quis sunt suscipit unde veniam, vitae.
-          <br><br>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa dignissimos eum libero pariatur sint sit tenetur velit vitae! Itaque libero magni odio perspiciatis quam! Eligendi illo laboriosam nihil numquam quasi?
+        <p> Welkom bij de website van Retrofit europe. Wij zijn een open data platform vanuit het lectoraat Nieuwe Energie in de Stad van de Hogeschool Utrecht. De focus van dit project legt op data en kostenstructuur voor het realiseren van duurzame renovatie in de hoogbouw <br>
+          <br> Ons doel is overzicht te brengen van (geografische) datasets die relevant zijn voor de eerste offerte voor het duurzaam renovaren van een appartement in een flatgebouw <br>
+          <br> Momenteel is de site in ontwikkeling. Functies kunnen in de loop van tijd toegevoegd worden.
         </p>
       </div>
     </div>
@@ -65,7 +62,93 @@
       </div>
 
       <div class="content">
-        <p>team</p>
+        <div class="team-member">
+          <div class="inner">
+            <img src="assets/img/rogier.png" alt="team member">
+            <p class="name">Rogier Lateveer</p>
+            <p class="function">Docent Lectoraat Nieuwe Energie in de Stad</p>
+
+            <div class="linkedIn">
+              <a href="https://www.linkedin.com/in/rogierlaterveer/" class="absolute">
+                <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" class="global-nav__logo">
+                <title>LinkedIn</title>
+
+                <g>
+                  <!---->          <path d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z" fill="currentColor"></path>
+                </g>
+              </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="team-member">
+          <div class="inner">
+            <img src="assets/img/placeholder-team-member.png" alt="team member">
+            <p class="name">Wilko Panje</p>
+            <p class="function">Docent Lectoraat Nieuwe Energie in de Stad</p>
+          </div>
+        </div>
+
+        <div class="team-member">
+          <div class="inner">
+            <img src="assets/img/timo.png" alt="team member">
+            <p class="name">Timo Walraven</p>
+            <p class="function">Student Built Environment</p>
+
+            <div class="linkedIn">
+              <a href="https://www.linkedin.com/in/timowalraven/" class="absolute">
+                <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" class="global-nav__logo">
+                <title>LinkedIn</title>
+
+                <g>
+                  <!---->          <path d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z" fill="currentColor"></path>
+                </g>
+              </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="team-member">
+          <div class="inner">
+            <img src="assets/img/niels.png" alt="team member">
+            <p class="name">Niels Norbart</p>
+            <p class="function">Student Built Environment</p>
+
+            <div class="linkedIn">
+              <a href="https://www.linkedin.com/in/niels-norbart-917ab5152/" class="absolute">
+                <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" class="global-nav__logo">
+                <title>LinkedIn</title>
+
+                <g>
+                  <!---->          <path d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z" fill="currentColor"></path>
+                </g>
+              </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="team-member">
+          <div class="inner">
+            <img src="assets/img/marc.jpg" alt="team member">
+            <p class="name">Marc Reijeren van Buuren</p>
+            <p class="function">Student Built Environment</p>
+
+            <div class="linkedIn">
+              <a href="https://www.linkedin.com/in/marc-reijersen-van-buuren-158a26137/" class="absolute">
+                <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" class="global-nav__logo">
+                <title>LinkedIn</title>
+
+                <g>
+                  <!---->          <path d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z" fill="currentColor"></path>
+                </g>
+              </svg>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
